--- a/package.json
+++ b/package.json
@@ -62,7 +62,10 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^4.1.12",
-    "wouter": "^2.8.6"
+    "wouter": "^2.8.6",
+    "react-markdown": "^8.0.0",
+    "remark-gfm": "^3.0.0",
+    "remark-breaks": "^3.0.0",
   },
   "devDependencies": {
     "@builder.io/vite-plugin-jsx-loc": "^0.1.1",
