feat(site): scaffold Astro + Svelte site, move content, add pages and GH Pages workflow

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "preview": "astro preview",
     "format": "prettier --write ."
   },
-  "dependencies": {},
+  "dependencies": {
+    "astro": "^5.16.6"
+  },
   "devDependencies": {
-    "astro": "^5.16.6",
     "@astrojs/svelte": "^7.2.4",
     "svelte": "^5.46.1",
     "typescript": "^5.9.3",
     "prettier": "^3.6.2"
   }
-} 
+}
+
